# libperceptroncuda

./: .gitignore  CMakeLists.txt  bundle.sh
include/: featuretransform.h  kernelperceptron.h  perceptron.h  perceptron_common.h  simpleperceptron.h
include/epblas/: epblas.h  epcudakernel.h  epcudautil.h  eputil.h
src/: eputil.c  featuretransformcuda.c  kernelperceptroncuda.c  perceptroncuda.c  simpleperceptroncuda.c
src/epblas/: epblas_common.c  epblas_cuda.c  epcudakernel.cu
tests/: t1.c  t2.c  t2large.c  t3.c  tCosSinFast.c  tMatrixVectorProduct.c  tMatrixVectorProductDimMismatch.c  tMatrixVectorProductwithTranspose.c  tPerceptronBatchScorewithRBFSampler.c  tPerceptronBatchScorewithRBFSamplerToyProblem.c  tPerceptronUpdate.c  tPerceptronUpdatewithRBFSampler.c  tRectangularMatrixMatrixProduct.c  tRectangularMatrixMatrixProductTranspose.c  tRectangularMatrixMatrixProductTransposeWithSizingError.c  tSimple.c  tSimplePerceptronwithRBFSampler.c  tSquareMatrixMatrixProduct.c  tdotprod.c  tmatrixvectorprod.c  tvappend.c
